fixed viewport height bug on mobile devices

--- a/client/src/components/App/styles.scss
+++ b/client/src/components/App/styles.scss
@@ -1,7 +1,7 @@
 #app {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: -webkit-fill-available;
   font-size: 1.3em;
 }
 
