--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,10 @@
+html,
+body,
+#root {
+  min-height: 100% !important;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
